files/style.css
body {
    background-color: #535353;
    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
}

#main {
    background-color: #7b7b7b;
    margin: 0 auto;
    padding-top: 10px;
    width: 90vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: space-around;
}

header {
    background-color: #c6c6c6;
    margin: 0 auto;
    width: 90vw;
    padding: 20px;
    display: flex;
}

header img {
    width: 48.5%;
    padding-right: 3%;
}

button:hover {
    background-color: #777777;
}

a[href*="mspaforums.com"], .missing {
    color: red !important;
    font-weight: bold;
}

div.img {
    background-color: #c6c6c6;
    padding: 10px;
    height: 80px;
    width: 45%;
    margin-bottom: 10px;
}

div.img p, div.img a, div.img ul {
    display: none;
}

div.img img {
    cursor: pointer;
}

div.open {
    height: 100%;
}

div.open p, div.open ul {
    display: block;
}

div.open a {
    display: inline;
}

